# gtest_on_cmake_and_clion

./: .gitignore  CMakeLists.txt  README.md
tests/: unittest.cpp
